--- a/hotel.html
+++ b/hotel.html
@@ -72,8 +72,7 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Amara Resort & Spa</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Гостиница</p>
-                <p class="hotels__price">от 4000 Р.</p>
+                <p class="hotels__type">Гостиница &emsp;&emsp; от 4000 Р.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
@@ -93,8 +92,7 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Desert Quail inn</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Мотель</p>
-                <p class="hotels__price">от 3000 Р.</p>
+                <p class="hotels__type">Мотель &emsp;&emsp; от 3000 Р.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
@@ -114,8 +112,7 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Villas At Poco Diabolo</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Апартаменты</p>
-                <p class="hotels__price">от 2000 Р.</p>
+                <p class="hotels__type">Апартаменты &emsp;&emsp; от 2000 Р.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
@@ -150,7 +147,7 @@
       <p class="footer-copyright">
         <b>website by</b>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">
         </a>
       </p>
     </footer>
