--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <div class="main-sign outline">
           <h3>Настоящий городок</h3>
-          <p>— №1 —</p>
-          <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+          <p class="main-sign__number">— №1 —</p>
+          <p class="main-sign__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
       </section>
       <section class="features">
@@ -75,8 +75,8 @@
         <div class="main-sign">
           <h3>Там есть<br>
             Мост дьявола</h3>
-          <p>— №2 —</p>
-          <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
+          <p class="main-sign__number">— №2 —</p>
+          <p class="main-sign__text">Да, понему можно пройти! Если конечно вы осмелитись</p>
         </div>
       </section>
       <section class="main-comfort">
@@ -151,8 +151,8 @@
       </section>
     </main>
     <footer class="main-footer outline">
-      <p class="main-footer-tag">#VISITSEDONA</p>
-      <ul class="footer-social">
+      <p class="main-footer-tag outline">#VISITSEDONA</p>
+      <ul class="footer-social outline">
         <li>
           <a href="#" class="social-button">
             <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
@@ -166,7 +166,7 @@
             <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
         </li>
       </ul>
-      <p class="footer-copyright">
+      <p class="footer-copyright outline">
         <b>Website by</b>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">
