--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <label for="arrival__date">
               Дата заезда:
             </label>
-            <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017">
+            <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017" class="map__item__option outline">
             <button type="button" title="Поле для выбора">
               <img src="img/calendar.svg" alt="Календарь">
             </button>
@@ -125,7 +125,7 @@
             <label for="departure__date">
               Дата выезда:
             </label>
-            <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017">
+            <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017" class="map__item__option outline">
             <button type="button" title="Поле для выбора">
               <img src="img/calendar.svg" alt="Календарь">
             </button>
@@ -136,7 +136,7 @@
             </label>
             <button type="button" title="Минус">-</button>
             <input id="grown" type="text" name="grown" placeholder="2" class="number">
-            <button type="button" title="Плюс">+</button>
+            <button type="button" title="Плюс" class="map__item__button">+</button>
           <!-- </p>
           <p class="map__item"> -->
             <label for="children">
@@ -144,7 +144,7 @@
             </label>
             <button type="button" title="Минус">-</button>
             <input id="children" type="text" name="children" placeholder="0" class="number">
-            <button type="button" title="Плюс">+</button>
+            <button type="button" title="Плюс" class="map__item__button">+</button>
           </p>
           <button class="button" type="submit">Найти</button>
         </form>
