--- a/hotel.html
+++ b/hotel.html
@@ -65,7 +65,7 @@
       <section class="hotels">
         <h2 class="visually-hidden">Каталог</h2>
         <ul class="hotels__list outline">
-          <li class="hotels__item outline">
+          <li class="hotels__item"  outline>
             <div class="hotels__image">
               <img src="img/hotel-picture1.jpg" width="135" height="90" alt="Amara Resort & Spa">
             </div>
