--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="main-comfort-item outline">
           <li class="outline">
-            <h3>Небольшая<br>
+            <h3 class="main-comfort-item__title">Небольшая<br>
               площадь</h3>
-            <p>— №3 —</p>
-            <p>все достопримечательности
+            <p class="main-comfort-item__number">— №3 —</p>
+            <p class="main-comfort-item__text">все достопримечательности
               находятся очень близко</p>
           </li>
           <li class="outline">
-            <h3>Красивая<br>
+            <h3 class="main-comfort-item__title">Красивая<br>
               дорога</h3>
-            <p>— №4 —</p>
-            <p>Ехать в седонну из лас-вегаса совсем
+            <p class="main-comfort-item__number">— №4 —</p>
+            <p class="main-comfort-item__text">Ехать в седонну из лас-вегаса совсем
               не скучно</p>
           </li>
           <li class="outline">
-            <h3>Мало<br>
+            <h3 class="main-comfort-item__title">Мало<br>
               туристов</h3>
-            <p>— №5 —</p>
-            <p>Большинство едет в гранд каньон
+            <p class="main-comfort-item__number">— №5 —</p>
+            <p class="main-comfort-item__text">Большинство едет в гранд каньон
               и толпится там</p>
           </li>
         </ul>
@@ -131,14 +131,14 @@
             </button>
           </p>
           <p class="map__item outline">
-            <label for="grown">
+            <label for="grown" class="map__item__gross outline">
               Взрослые:
             </label>
             <button type="button" title="Минус">-</button>
             <input id="grown" type="text" name="grown" placeholder="2" class="number">
             <button type="button" title="Плюс" class="map__item__button">+</button>
-          <!-- </p>
-          <p class="map__item"> -->
+          </p>
+          <p class="map__item child outline">
             <label for="children">
               Дети:
             </label>
@@ -155,15 +155,15 @@
       <ul class="footer-social outline">
         <li>
           <a href="#" class="social-button">
-            <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер</a>
+            <img src="img/twitter.svg" width="17" height="22" alt="Твиттер"></a>
         </li>
         <li>
           <a href="#" class="social-button">
-            <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук</a>
+            <img src="img/fb-icon.svg" width="17" height="22" alt="Фейсбук"></a>
         </li>
         <li>
           <a href="#" class="social-button">
-            <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
+            <img src="img/youtube.svg" width="17" height="22" alt="Ютуб"></a>
         </li>
       </ul>
       <p class="footer-copyright outline">
