--- a/index.html
+++ b/index.html
@@ -1,178 +1,171 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="utf-8">
-  <title>Главная</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Главная</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div class="container">
-    <header class="main-header outline">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
-        </a>
-        <ul class="site-navigation">
-          <li class="outline">
-            <a href="info.html">Информация</a>
-          </li>
-          <li class="outline">
-            <a href="PhotoandVideo.html">Фото и Видео</a>
-          </li>
-          <li class="outline">
-            <a href="Statemap.html">Карта штата</a>
-          </li>
-          <li class="outline">
-            <a href="hotel.html">Гостиницы</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="legend outline">
-        <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
-      </section>
-      <section class="feature outline">
-        <p class="feature__title">Седонна - небольшой городок в Аризоне,
-          заслуживающий большего!</p>
-        <p class="feature__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
-      </section>
-      <section class="main-city main-city-right outline">
-        <div class="main-photo">
-          <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
-        </div>
-        <div class="main-sign outline">
-          <h3>Настоящий городок</h3>
-          <p class="main-sign__number">— №1 —</p>
-          <p class="main-sign__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        </div>
-      </section>
-      <section class="features">
-        <ul class="features-list outline">
-          <li class="feature-home outline">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле,
-              всё как в кино!</p>
-          </li>
-          <li class="feature-food outline">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер,
-              вы не разочаруетесь!</p>
-          </li>
-          <li class="feature-souvenir outline">
-            <h3>Сувениры</h3>
-            <p>Нетолько китайского, но и местного
-              производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="main-city outline">
-        <div class="main-photo">
-          <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
-        </div>
-        <div class="main-sign">
-          <h3>Там есть<br>
-            Мост дьявола</h3>
-          <p class="main-sign__number">— №2 —</p>
-          <p class="main-sign__text">Да, понему можно пройти! Если конечно вы осмелитись</p>
-        </div>
-      </section>
-      <section class="main-comfort">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="main-comfort-item outline">
-          <li class="outline">
-            <h3 class="main-comfort-item__title">Небольшая<br>
-              площадь</h3>
-            <p class="main-comfort-item__number">— №3 —</p>
-            <p class="main-comfort-item__text">все достопримечательности
-              находятся очень близко</p>
-          </li>
-          <li class="outline">
-            <h3 class="main-comfort-item__title">Красивая<br>
-              дорога</h3>
-            <p class="main-comfort-item__number">— №4 —</p>
-            <p class="main-comfort-item__text">Ехать в седонну из лас-вегаса совсем
-              не скучно</p>
-          </li>
-          <li class="outline">
-            <h3 class="main-comfort-item__title">Мало<br>
-              туристов</h3>
-            <p class="main-comfort-item__number">— №5 —</p>
-            <p class="main-comfort-item__text">Большинство едет в гранд каньон
-              и толпится там</p>
-          </li>
-        </ul>
-      </section>
-      <section class="map outline">
-        <h2 class="visually-hidden">Поиск гостиниц</h2>
-        <p class="map__title">Заинтересовались?</p>
-        <p class="map__desc">Укажите предпологаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
-        <form action="https://echo.htmlacademy.ru" class="map__form outline" method="post">
-          <p class="map__item">
-            <label for="arrival__date">
-              Дата заезда:
-            </label>
-            <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017" class="map__item__option outline">
-            <button type="button" title="Поле для выбора">
-              <img src="img/calendar.svg" alt="Календарь">
-            </button>
-          </p>
-          <p class="map__item">
-            <label for="departure__date">
-              Дата выезда:
-            </label>
-            <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017" class="map__item__option outline">
-            <button type="button" title="Поле для выбора">
-              <img src="img/calendar.svg" alt="Календарь">
-            </button>
-          </p>
-          <p class="map__item outline">
-            <label for="grown" class="map__item__gross outline">
-              Взрослые:
-            </label>
-            <button type="button" title="Минус">-</button>
-            <input id="grown" type="text" name="grown" placeholder="2" class="number">
-            <button type="button" title="Плюс" class="map__item__button">+</button>
-          </p>
-          <p class="map__item child outline">
-            <label for="children">
-              Дети:
-            </label>
-            <button type="button" title="Минус">-</button>
-            <input id="children" type="text" name="children" placeholder="0" class="number">
-            <button type="button" title="Плюс" class="map__item__button">+</button>
-          </p>
-          <button class="button" type="submit">Найти</button>
-        </form>
-      </section>
-    </main>
-    <footer class="main-footer outline">
-      <p class="main-footer-tag outline">#VISITSEDONA</p>
-      <ul class="footer-social outline">
-        <li>
-          <a href="#" class="social-button">
-            <img src="img/twitter.svg" width="17" height="22" alt="Твиттер"></a>
-        </li>
-        <li>
-          <a href="#" class="social-button">
-            <img src="img/fb-icon.svg" width="17" height="22" alt="Фейсбук"></a>
-        </li>
-        <li>
-          <a href="#" class="social-button">
-            <img src="img/youtube.svg" width="17" height="22" alt="Ютуб"></a>
-        </li>
-      </ul>
-      <p class="footer-copyright outline">
-        <b>Website by</b>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">
-        </a>
-      </p>
-    </footer>
-  </div>
+    <div class="container">
+        <header class="main-header outline">
+            <nav class="main-navigation">
+                <a class="main-header-logo">
+                    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип тур-агенства Седонна">
+                </a>
+                <ul class="site-navigation">
+                    <li class="outline">
+                        <a href="info.html">Информация</a>
+                    </li>
+                    <li class="outline">
+                        <a href="PhotoandVideo.html">Фото и Видео</a>
+                    </li>
+                    <li class="outline">
+                        <a href="Statemap.html">Карта штата</a>
+                    </li>
+                    <li class="outline">
+                        <a href="hotel.html">Гостиницы</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="legend outline">
+                <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
+            </section>
+            <section class="feature outline">
+                <p class="feature__title">Седонна - небольшой городок в Аризоне, заслуживающий большего!</p>
+                <p class="feature__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+            </section>
+            <section class="main-city main-city-right outline">
+                <div class="main-photo">
+                    <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
+                </div>
+                <div class="main-sign outline">
+                    <h3>Настоящий городок</h3>
+                    <p class="main-sign__number">— №1 —</p>
+                    <p class="main-sign__text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                </div>
+            </section>
+            <section class="features">
+                <ul class="features-list outline">
+                    <li class="feature-home outline">
+                        <h3>Жильё</h3>
+                        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                    </li>
+                    <li class="feature-food outline">
+                        <h3>Еда</h3>
+                        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    </li>
+                    <li class="feature-souvenir outline">
+                        <h3>Сувениры</h3>
+                        <p>Нетолько китайского, но и местного производства!
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <section class="main-city outline">
+                <div class="main-photo">
+                    <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
+                </div>
+                <div class="main-sign">
+                    <h3>Там есть<br> Мост дьявола</h3>
+                    <p class="main-sign__number">— №2 —</p>
+                    <p class="main-sign__text">Да, понему можно пройти! Если конечно вы осмелитись</p>
+                </div>
+            </section>
+            <section class="main-comfort">
+                <h2 class="visually-hidden">Наши преимущества</h2>
+                <ul class="main-comfort-item outline">
+                    <li class="outline">
+                        <h3 class="main-comfort-item__title">Небольшая<br> площадь
+                        </h3>
+                        <p class="main-comfort-item__number">— №3 —</p>
+                        <p class="main-comfort-item__text">все достопримечательности находятся очень близко</p>
+                    </li>
+                    <li class="outline">
+                        <h3 class="main-comfort-item__title">Красивая<br> дорога
+                        </h3>
+                        <p class="main-comfort-item__number">— №4 —</p>
+                        <p class="main-comfort-item__text">Ехать в седонну из лас-вегаса совсем не скучно</p>
+                    </li>
+                    <li class="outline">
+                        <h3 class="main-comfort-item__title">Мало<br> туристов
+                        </h3>
+                        <p class="main-comfort-item__number">— №5 —</p>
+                        <p class="main-comfort-item__text">Большинство едет в гранд каньон и толпится там</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="map outline">
+                <h2 class="visually-hidden">Поиск гостиниц</h2>
+                <p class="map__title">Заинтересовались?</p>
+                <p class="map__desc">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
+                <form action="https://echo.htmlacademy.ru" class="map__form outline" method="post">
+                    <p class="map__item">
+                        <label for="arrival__date">
+                            Дата заезда:
+                        </label>
+                        <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017" class="map__item__option outline">
+                        <button type="button" title="Поле для выбора">
+                          <img src="img/calendar.svg" alt="Календарь">
+                        </button>
+                    </p>
+                    <p class="map__item">
+                        <label for="departure__date">Дата выезда:</label>
+                        <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017" class="map__item__option outline">
+                        <button type="button" title="Поле для выбора">
+                          <img src="img/calendar.svg" alt="Календарь">
+                        </button>
+                    </p>
+                    <p class="map__item outline">
+                        <label for="grown" class="map__item__gross outline">
+                          Взрослые:
+                        </label>
+                        <button type="button" title="Минус">-</button>
+                        <input id="grown" type="text" name="grown" placeholder="2" class="number">
+                        <button type="button" title="Плюс" class="map__item__button">+</button>
+                    </p>
+                    <p class="map__item child outline">
+                        <label for="children">
+                           Дети:
+                        </label>
+                        <button type="button" title="Минус">-</button>
+                        <input id="children" type="text" name="children" placeholder="0" class="number">
+                        <button type="button" title="Плюс" class="map__item__button">+</button>
+                    </p>
+                    <button class="button" type="submit">Найти</button>
+                </form>
+            </section>
+        </main>
+        <footer class="main-footer outline">
+            <p class="main-footer-tag outline">#VISITSEDONA</p>
+            <ul class="footer-social outline">
+                <li>
+                    <a href="#" class="social-button">
+                        <img src="img/twitter.svg" width="17" height="22" alt="Твиттер"></a>
+                </li>
+                <li>
+                    <a href="#" class="social-button">
+                        <img src="img/fb-icon.svg" width="17" height="22" alt="Фейсбук"></a>
+                </li>
+                <li>
+                    <a href="#" class="social-button">
+                        <img src="img/youtube.svg" width="17" height="22" alt="Ютуб"></a>
+                </li>
+            </ul>
+            <p class="footer-copyright outline">
+                <b class="site">Website by</b>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
+                    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">
+                </a>
+            </p>
+        </footer>
+    </div>
 </body>
+
 </html>
