--- a/index.html
+++ b/index.html
@@ -126,17 +126,25 @@
                         <label for="grown" class="map__item__gross outline">
                           Взрослые:
                         </label>
-                        <button type="button" title="Минус">-</button>
+                        <button type="button" title="Минус" class="minus">
+                          <img src="./img/minus.svg" alt="Минус">
+                        </button>
                         <input id="grown" type="text" name="grown" placeholder="2" class="number">
-                        <button type="button" title="Плюс" class="map__item__button">+</button>
+                        <button type="button" title="Плюс" class="map__item__button" class="plus">
+                          <img src="./img/plus.svg" alt="Плюс">
+                        </button>
                     </p>
                     <p class="map__item child outline">
                         <label for="children">
                            Дети:
                         </label>
-                        <button type="button" title="Минус">-</button>
+                        <button type="button" title="Минус" class="minus">
+                          <img src="./img/minus.svg" alt="Минус">
+                        </button>
                         <input id="children" type="text" name="children" placeholder="0" class="number">
-                        <button type="button" title="Плюс" class="map__item__button">+</button>
+                        <button type="button" title="Плюс" class="map__item__button" class="plus">
+                          <img src="./img/plus.svg" alt="Плюс">
+                        </button>
                     </p>
                     <button class="button" type="submit">Найти</button>
                 </form>
