--- a/hotel.html
+++ b/hotel.html
@@ -63,18 +63,20 @@
             <a href="rated.html">По рейтингу</a>
           </li>
         </ul>
-        <ul class="cursor">
-          <li class="pointer__up">
-            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#231F20" d="M5.5 0L0 10h11z" />
-            </svg>
-          </li>
-          <li class="pointer__down">
-            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-              <path fill="#81b3d2" d="M5.5 10L0 0h11" />
-            </svg>
-          </li>
-        </ul>
+        <div class="option">
+          <ul class="cursor">
+            <li class="pointer__up">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#231F20" d="M5.5 0L0 10h11z" />
+              </svg>
+            </li>
+            <li class="pointer__down">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#81b3d2" d="M5.5 10L0 0h11" />
+              </svg>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="hotels">
         <h2 class="visually-hidden">Каталог</h2>
@@ -95,10 +97,7 @@
             </div>
             <div class="hotels__rate outline">
               <span class="hotels__rate-star star-4">
-                <!-- <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда"> -->
+                <div class="stars stars-4 hide-text">Четыре звезды</div>
               </span>
               <p class="hotels__rate-text">Рейтинг: 8,5</p>
             </div>
@@ -119,9 +118,7 @@
             </div>
             <div class="hotels__rate outline">
               <span class="hotels__rate-star star-3">
-                <!-- <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда"> -->
+                <div class="stars stars-3 hide-text">Три звезды</div>
               </span>
               <p class="hotels__rate-text">Рейтинг: 8,9</p>
             </div>
@@ -142,8 +139,7 @@
             </div>
             <div class="hotels__rate outline">
               <span class="hotels__rate-star star-2">
-                <!-- <img src="./img/star.svg" alt="Звезда">
-                <img src="./img/star.svg" alt="Звезда"> -->
+                <div class="stars stars-2 hide-text">Две звезды</div>
               </span>
               <p class="hotels__rate-text">Рейтинг: 9,2</p>
             </div>
